testsuite/tests/polykinds/T14265.stderr

T14265.hs:7:12: error:
    • Found type wildcard ‘_’ standing for ‘w :: k’
      Where: ‘w’, ‘k’ are rigid type variables bound by
               the inferred type of f :: proxy w -> ()
               at T14265.hs:8:1-8
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: f :: proxy _ -> ()

T14265.hs:10:15: error:
    • Found type wildcard ‘_’ standing for ‘w’
      Where: ‘w’ is a rigid type variable bound by
               the inferred type of foo :: StateT w w1 ()
               at T14265.hs:11:1-15
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: StateT _ _ ()

T14265.hs:10:17: error:
    • Found type wildcard ‘_’ standing for ‘w1 :: * -> *’
      Where: ‘w1’ is a rigid type variable bound by
               the inferred type of foo :: StateT w w1 ()
               at T14265.hs:11:1-15
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: StateT _ _ ()
